@@ -15,3 +15,5 @@ t/manifest.t
 t/pod-coverage.t
 t/pod.t
 Makefile.PL
+META.yml                                 Module YAML meta-data (added by MakeMaker)
+META.json                                Module JSON meta-data (added by MakeMaker)
