@@ -7,10 +7,7 @@ use Test::More;
 plan tests => 1;
 
 BEGIN {
-    use_ok('WWW::KlickTel::API');
+    use_ok('WWW::KlickTel::API') || BAIL_OUT("Cannot load Module");;
 }
 
 diag("Testing WWW::KlickTel::API $WWW::KlickTel::API::VERSION, Perl $], $^X");
-
-# bail out as suggested by CPANAuthorNotes
-BAIL_OUT("Cannot load Module");
